# wasm-component

./: Cargo.toml  README.md
src/: main.rs
