[package]
name = "wasm-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4.1"
tempdir = "0.3.7"
serde_json = "1.0.64"
anyhow = "1.0.44"
